<resources>
    <string name="ellipsis">&#8230;</string>

    <string name="app_name">知道</string>

    <string name="action_more">更多选项</string>
    <string name="action_share">分享</string>
    <string name="action_favorite">喜欢</string>
    <string name="action_comment">评论</string>
    <string name="action_praise">点赞</string>

    <string name="navigation_daily">日报</string>
    <string name="navigation_theme">主题</string>
    <string name="navigation_section">专栏</string>
    <string name="navigation_news">新闻</string>

    <string name="today_hot_news">今日热闻</string>
    <string name="swipe_back_hint">左滑可以返回哦~</string>
    <string name="share_from">来自「知了日报」的分享：</string>
    <string name="praise_num">点赞数：%1$d</string>
    <string name="no_recommenders">该日报还没有推荐者哦！</string>
    <string name="daily_recommenders">日报推荐者</string>
    <string name="comment_num">%1$d&#160;&#160;条评论</string>
    <string name="long_comment_num">长评论&#160;(%1$d)</string>
    <string name="short_comment_num">短评论&#160;(%1$d)</string>
    <string name="no_comment">还没有评论哦!</string>
    <string name="theme_editor">主编</string>
    <string name="nickname">angel5blue</string>
    <string name="look_homepage">查看我的个人主页</string>
    <string name="feedback">意见反馈</string>
    <string name="common_setting">通用设置</string>
    <string name="about_app">关于知道</string>
    <string name="github">GitHub:https://github.com/zhouzejin</string>
    <string name="micro_blog">微博:https://m.weibo.cn/u/3201750723</string>
    <string name="jian_shu">简书:http://www.jianshu.com/u/ffd32e08018c</string>
    <string name="about_me">关于我</string>
    <string name="input_feedback">请输入您的宝贵意见</string>
    <string name="feedback_length">160</string>
    <string name="submit">提交</string>
    <string name="content_empty">输入的内容为空</string>
    <string name="submit_success">提交成功</string>
    <string name="submit_fail">提交失败</string>
    <string name="about_introduce_and_help">介绍与帮助</string>
    <string name="about_introduce">「知道」- 每天3次，每次7分钟\n\n项目基于Dagger + RxJava + Retrofit实现，采用MVP架构，UI参考HotBitmapGG的RxZhiHu开源项目，灵感来自知乎日报客户端，喜欢的朋友们可以star一下，谢谢啦~\n\nGitHub地址：https://github.com/zhouzejin/MvpZhihu</string>
    <string name="about_function">功能介绍</string>
    <string name="about_function_list">1.日报列表\n2.日报详情\n3.主题日报\n4.日报专栏\n5.热门新闻\n6.日报评论\n7.日报分享</string>
    <string name="about_used_open_source">使用的开源项目</string>
    <string name="about_used_open_source_list">com.google.dagger:dagger:2.11\nio.reactivex:rxjava:1.3.0\nio.reactivex:rxandroid:1.2.1\ncom.squareup.retrofit2:retrofit:2.3.0\ncom.squareup.sqlbrite:sqlbrite:1.1.2\ncom.github.bumptech.glide:glide:3.8.0\ncom.jakewharton:butterknife:8.7.0\ncom.jakewharton.timber:timber:4.5.1</string>
    <string name="about_star_other_project">欢迎关注我的其他开源项目</string>
    <string name="about_other_project_list">第三方哔哩哔哩客户端(采用MVVM架构)：https://github.com/zhouzejin/MvvmBilibili\n</string>
    <string name="about_version">版本号：v%1$s</string>

    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>

    <string name="empty_subjects">There aren\'t any subjects</string>
    <string name="error_loading_subjects">There was a problem loading the subjects</string>
</resources>
