<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="1"
        android:title="@string/action_share"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_action_favorite"
        android:orderInCategory="2"
        android:title="@string/action_favorite"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_comment"
        android:orderInCategory="3"
        android:title="@string/action_comment"
        app:actionLayout="@layout/menu_item_comment"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_praise"
        android:orderInCategory="4"
        android:title="@string/action_praise"
        app:actionLayout="@layout/menu_item_praise"
        app:showAsAction="always"/>
</menu>