<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/about_toolbar_layout_height"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarTitleStyle.About"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary"
                android:fitsSystemWindows="true"
                android:gravity="center_horizontal|bottom"
                android:orientation="vertical"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.8">

                <com.sunny.mvpzhihu.widget.CircleImageView
                    android:layout_width="@dimen/about_launcher_icon_width"
                    android:layout_height="@dimen/about_launcher_icon_height"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/about_app_name_margin_top"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_large_body"/>

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/about_version_margin_bottom"
                    android:layout_marginTop="@dimen/about_version_margin_top"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_small_body"
                    tools:text="9.9.9"/>
            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.AppCompat.Light"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/about_content_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_introduce_and_help"
                android:textColor="@color/text_color_shadow"
                android:textSize="@dimen/text_small_body"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:padding="@dimen/about_introduce_padding"
                android:text="@string/about_introduce"
                android:textColor="@color/text_color_gary"
                android:textIsSelectable="true"
                android:textSize="@dimen/text_small_body"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/about_line_margin"
                android:layout_marginTop="@dimen/about_line_margin"
                android:background="@color/line_background"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_function"
                android:textColor="@color/text_color_shadow"
                android:textSize="@dimen/text_small_body"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/about_introduce_padding"
                android:text="@string/about_function_list"
                android:textColor="@color/text_color_gary"
                android:textSize="@dimen/text_small_body"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/about_line_margin"
                android:layout_marginTop="@dimen/about_line_margin"
                android:background="@color/line_background"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_used_open_source"
                android:textColor="@color/text_color_shadow"
                android:textSize="@dimen/text_small_body"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/about_introduce_padding"
                android:text="@string/about_used_open_source_list"
                android:textColor="@color/text_color_gary"
                android:textSize="@dimen/text_small_body"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/about_line_margin"
                android:layout_marginTop="@dimen/about_line_margin"
                android:background="@color/line_background"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_star_other_project"
                android:textColor="@color/text_color_shadow"
                android:textSize="@dimen/text_small_body"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/about_introduce_padding"
                android:text="@string/about_other_project_list"
                android:textColor="@color/text_color_gary"
                android:textSize="@dimen/text_small_body"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>